fix(ui): Re-align top nav brackets and delimeters.
- add a sass to manage vertical alignment of delims.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -410,6 +410,10 @@ footer {
     }
   }
 
+  &__brackets {
+    line-height: 1.1em;
+  }
+
   &__divider {
     margin-right: 0.5em;
   }
